# newdotfiles

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE.jinja  MANUAL_TEST.md  README.md  _copier_conf.yml  ai_analyzer.py  copier.yml  debug_ui.py  manage_keys.py  noxfile.py  pyproject.toml  render_templates.py  run_final.py  run_screen_helper.py  run_screen_helper_fixed.py  screen_helper.md  screen_helper.tasks.md  screen_helper_demo.py  screen_recorder.html  screen_recorder_fastapi.py  setup_and_run.py  setup_project.py  test_app_manual.py  test_app_startup.py  test_cloudflare_turn.py  test_codec_detection.py  test_fastapi_screen_recorder.py  test_fixed_app.py  test_fixed_recorder.py  test_real_screen_capture.py  test_screen_recorder.html  test_screen_recorder_fixed_v2.py  test_screen_recorder_playwright.py  test_screen_recording_functionality.py  test_smart_snapshot.py  test_with_real_api.py  (+2 more)
.claude/: CLAUDE.md  todos.md
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENVIRONMENT_SETUP.md
.github/workflows/: book.yml  ci.yml  pre-commit.yml  release.yml
book/: _config.yml  genindex.html  objects.inv  search.html  searchindex.js
book/_sources/docs/: index.md  marimo.md  reports.md
book/docs/: api.html  api.md  index.html  marimo.html  reports.html
marimo/: __init__.html  demo.html
pdoc/: index.html  newdotfiles.html  search.js
pdoc/newdotfiles/: add.html
src/newdotfiles/: __init__.py  add.py  cli.py  config.py  logging_config.py  screen_helper.py  screen_helper_fixed.py  screen_helper_fixed_v2.py  screen_helper_working.py
src/python_boilerplate/: __init__.py  add.py  cli.py
src/tests/: conftest.py  test_add.py  test_app_e2e.py  test_config.py  test_docs.py  test_notebooks.py  test_real_functionality.py  test_screen_helper.py
tests/coverage/: coverage.info  coverage.json  coverage.xml
tests/html-coverage/: class_index.html  function_index.html  index.html  status.json  z_1b15570c3eb6ecf7___init___py.html  z_1b15570c3eb6ecf7_add_py.html
tests/html-report/: report.html
